Changelog
=========

Version 3.8.0
-------------

- Add commpression support. Thanks to @alanjds
- Change package name from redis_cache to django_redis.
- Add backward compatibility layer for redis_cache package name.


Version 3.7.2
-------------

- Add missing forward of version parameter from `add()` to `set()` function. (by @fellowshipofone)

Version 3.7.1
-------------

- Improve docs (by @dkingman).
- Fix missing imports on sentinel client (by @opapy).
- Connection closing improvements on sentinel client (by @opapy).

Versiom 3.7.0
-------------

- Add support for django's `KEY_FUNCTION` and `REVERSE_KEY_FUNCTION` (by @teferi)
- Accept float value for socket timeout.
- Fix wrong behavior of `DJANGO_REDIS_IGNORE_EXCEPTIONS` with socket timeouts.
- Backward incompatible change: now raises original exceptions instead of self defined.

Version 3.6.2
-------------

- Add ttl method purposed to be included in django core.
- Add iter_keys method that uses redis scan methods for memmory efficient keys retrieval.
- Add version keyword parameter to keys.
- Deprecate django 1.3.x support.

Version 3.6.1
-------------

- Fix wrong import on sentinel client.


Version 3.6.0
-------------

- Add pluggable connection factory.
- Negative timeouts now works as expected.
- Delete operation now returns a number of deleted items instead of None.


Version 3.5.1
-------------

- Fixed redis-py < 2.9.0 incompatibilities
- Fixed runtests error with django 1.7


Version 3.5.0
-------------

- Removed: stats module (should be replaced with an other in future)
- New: experimentat client for add support to redis-sentinel.
- Now uses a django DEFAULT_TIMEOUT constant instead of ``True``. Deprecation
  warning added for code that now uses True (unlikely).
- Fix wrong forward of timeout on shard client.
- Fix incr_version wrong behavior when using shard client (wrong client used for set new key).


Version 3.4.0
-------------

- Fix exception name from ConnectionInterrumped to